@@ -44,6 +44,9 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Clean up some duplications in manpage.  Clarify portion of manpage on Dir and File nodes.
     - Reduce needless list conversions.
     - Fixed regex in Python scanner.
+    - Accomodate VS 2017 Express - it's got a more liberal license then VS
+      Community, so some people prefer it (from 2019, no more Express)
+      vswhere call should also now work even if programs aren't on the C: drive.
 
 
 RELEASE 3.1.2 - Mon, 17 Dec 2019 02:06:27 +0000
